# HydroCtrl

./: .gitignore  README.md
cctv-server/: CMakeLists.txt  run.sh
cctv-server/src/: ctrldevice.hpp  main.cpp  servo.hpp  video.hpp
client/: CMakeLists.txt  imgui.ini  run.sh
client/src/: application.cpp  application.hpp  iotnode.hpp  main.cpp  widget.hpp
doc/: definition.md
docs/: definition.md
lib/: message.hpp
node/: CMakeLists.txt  run.sh
node/res/: deviceinfo.json
node/src/: application.cpp  application.hpp  iotnode.hpp
proxy/: CMakeLists.txt  run.sh
proxy/src/: main.cpp  message.hpp  server.hpp
server/: CMakeLists.txt  run.sh
server/.cache/clangd/index/: main.cpp.B6B74FEB6693EDF6.idx
server/src/: device.hpp  main.cpp  participant.hpp  pool.hpp  server.hpp  user.hpp
virtual-test-node/src/: application.cpp  commands.hpp  inputsystem.hpp  util.hpp
